chore: rework icon rendering
Split renderers out in separate classes; no more loading client-only
methods on the server (@OnlyIn no longer a thing)